--- a/HomeWork/test-output/index.html
+++ b/HomeWork/test-output/index.html
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="group-Default_suite" class="navigator-link ">
-                    <span>0 groups</span>
+                    <span>2 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,27 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="quiz.AppleBagItmes" class="method navigator-link" hash-for-method="byingMacBookAir">byingMacBookAir</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="testng_controlflow.Part2Groups" class="method navigator-link" hash-for-method="LockedOutUserTest">LockedOutUserTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="testng_controlflow.Part2Groups" class="method navigator-link" hash-for-method="positiveLogInandOut">positiveLogInandOut</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="testng_controlflow.Part2Groups" class="method navigator-link" hash-for-method="problemUserTest">problemUserTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="testng_controlflow.Part2Groups" class="method navigator-link" hash-for-method="wrongPasswordTest">wrongPasswordTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="testng_controlflow.Part2Groups" class="method navigator-link" hash-for-method="wrongUsernameTest">wrongUsernameTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +142,42 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">quiz.AppleBagItmes</span>
+              <span class="class-name">testng_controlflow.Part2Groups</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="byingMacBookAir">
-                  </a> <!-- byingMacBookAir -->
-                  <span class="method-name">byingMacBookAir</span>
+                  <a name="LockedOutUserTest">
+                  </a> <!-- LockedOutUserTest -->
+                  <span class="method-name">LockedOutUserTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="positiveLogInandOut">
+                  </a> <!-- positiveLogInandOut -->
+                  <span class="method-name">positiveLogInandOut</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="problemUserTest">
+                  </a> <!-- problemUserTest -->
+                  <span class="method-name">problemUserTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="wrongPasswordTest">
+                  </a> <!-- wrongPasswordTest -->
+                  <span class="method-name">wrongPasswordTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="wrongUsernameTest">
+                  </a> <!-- wrongUsernameTest -->
+                  <span class="method-name">wrongUsernameTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +185,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/wm/3f31r2w95v3dx523k55_47540000gp/T/testng-eclipse-1479714564/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/wm/3f31r2w95v3dx523k55_47540000gp/T/testng-eclipse--71674116/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +194,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;quiz.AppleBagItmes&quot;/&gt;
+      &lt;class name=&quot;testng_controlflow.Part2Groups&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -170,6 +218,34 @@
             <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="test-group">
+              <span class="test-group-name">negative</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">LockedOutUserTest</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">wrongPasswordTest</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">wrongUsernameTest</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
+            <div class="test-group">
+              <span class="test-group-name">positive</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">positiveLogInandOut</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">problemUserTest</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-Default_suite" class="panel">
@@ -186,16 +262,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'byingMacBookAir')
-data.setCell(0, 2, 'quiz.AppleBagItmes')
-data.setCell(0, 3, 38348);
+data.setCell(0, 1, 'positiveLogInandOut')
+data.setCell(0, 2, 'testng_controlflow.Part2Groups')
+data.setCell(0, 3, 14730);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'wrongUsernameTest')
+data.setCell(1, 2, 'testng_controlflow.Part2Groups')
+data.setCell(1, 3, 13044);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'LockedOutUserTest')
+data.setCell(2, 2, 'testng_controlflow.Part2Groups')
+data.setCell(2, 3, 10539);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'wrongPasswordTest')
+data.setCell(3, 2, 'testng_controlflow.Part2Groups')
+data.setCell(3, 3, 10449);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'problemUserTest')
+data.setCell(4, 2, 'testng_controlflow.Part2Groups')
+data.setCell(4, 3, 10414);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 38 seconds</span>
+              <span class="suite-total-time">Total running time: 59 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -207,12 +299,64 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">byingMacBookAir</span>
+              <span class="reporter-method-name">problemUserTest</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Submiting choosen paramaters</span>
                 <span class="reporter-method-output">
-Reviewing Busket</span>
+Starting execution of "problemUserTest"</span>
+                <span class="reporter-method-output">	Locating, Adding and Submiting "ProblemUser data"</span>
+                <span class="reporter-method-output">	Finished the process</span>
+                <span class="reporter-method-output">Test completed, quit the Browser section</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">LockedOutUserTest</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">
+Refresh the Web Seccion...</span>
+                <span class="reporter-method-output">Starting execution of "LockedOutUserTest"</span>
+                <span class="reporter-method-output">	Locating, Adding and Submiting "LockedOutUser data"</span>
+                <span class="reporter-method-output">	Finished the process</span>
+                <span class="reporter-method-output">	Locate and Get the error message</span>
                 <span class="reporter-method-output">	Compare expectedMessage to actualMessage </span>
+                <span class="reporter-method-output">Test Completed, quit the Browser seccion</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">positiveLogInandOut</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">
+Starting execution of "Positive LogIn Credentials"</span>
+                <span class="reporter-method-output">SetUp process has finished</span>
+                <span class="reporter-method-output">	Locating, Adding and Submiting "PositiveUser data"</span>
+                <span class="reporter-method-output">	Finished the process</span>
+                <span class="reporter-method-output">skip this LogOut part IN CONSOLE, it's FALSE inside ()</span>
+                <span class="reporter-method-output">Test Completed</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">wrongUsernameTest</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">
+Starting execution of "Negative LogIn Credentials"</span>
+                <span class="reporter-method-output">SetUp process has finished</span>
+                <span class="reporter-method-output">	Locating, Adding and Submiting "WrongUserName data"</span>
+                <span class="reporter-method-output">	Finished the process</span>
+                <span class="reporter-method-output">	Locate and Get the error message</span>
+                <span class="reporter-method-output">	Compare expectedMessage to actualMessage </span>
+                <span class="reporter-method-output">Test Completed</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">wrongPasswordTest</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">
+Refresh the Web Seccion...</span>
+                <span class="reporter-method-output">Starting execution of "wrongPasswordTest"</span>
+                <span class="reporter-method-output">	Locating, Adding and Submiting "WrongPassword data"</span>
+                <span class="reporter-method-output">	Finished the process</span>
+                <span class="reporter-method-output">	Locate and Get the error message</span>
+                <span class="reporter-method-output">	Compare expectedMessage to actualMessage </span>
+                <span class="reporter-method-output">Test Completed</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -230,19 +374,27 @@ Reviewing Busket</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">quiz.AppleBagItmes</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
+              <div class="chronological-class-name">testng_controlflow.Part2Groups</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">byingMacBookAir</span>
-                <span class="method-start">3522 ms</span>
+                <span class="method-name">positiveLogInandOut</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">41875 ms</span>
-              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">problemUserTest</span>
+                <span class="method-start">14736 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">wrongUsernameTest</span>
+                <span class="method-start">25152 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">wrongPasswordTest</span>
+                <span class="method-start">38198 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">LockedOutUserTest</span>
+                <span class="method-start">48649 ms</span>
+              </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
