--- a/HomeWork/test-output/old/Default suite/groups.html
+++ b/HomeWork/test-output/old/Default suite/groups.html
@@ -1,4 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>negative</td><td>Part2Groups.LockedOutUserTest()[pri:5, instance:testng_controlflow.Part2Groups@3b2da18f]<br/>Part2Groups.wrongUsernameTest()[pri:3, instance:testng_controlflow.Part2Groups@3b2da18f]<br/>Part2Groups.wrongPasswordTest()[pri:4, instance:testng_controlflow.Part2Groups@3b2da18f]<br/></td></tr>
-<tr><td>positive</td><td>Part2Groups.positiveLogInandOut()[pri:1, instance:testng_controlflow.Part2Groups@3b2da18f]<br/>Part2Groups.problemUserTest()[pri:2, instance:testng_controlflow.Part2Groups@3b2da18f]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
