--- a/HomeWork/test-output/old/Default suite/methods.html
+++ b/HomeWork/test-output/old/Default suite/methods.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f084a8">  <td>23/11/14 22:42:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Part2Groups.problemUserTest()[pri:2, instance:testng_controlflow.Part2Groups@3b2da18f]">problemUserTest</td> 
-  <td>main@2021707251</td>   <td></td> </tr>
-<tr bgcolor="f084a8">  <td>23/11/14 22:43:33</td>   <td>33913</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Part2Groups.LockedOutUserTest()[pri:5, instance:testng_controlflow.Part2Groups@3b2da18f]">LockedOutUserTest</td> 
-  <td>main@2021707251</td>   <td></td> </tr>
-<tr bgcolor="f084a8">  <td>23/11/14 22:42:44</td>   <td>-14737</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Part2Groups.positiveLogInandOut()[pri:1, instance:testng_controlflow.Part2Groups@3b2da18f]">positiveLogInandOut</td> 
-  <td>main@2021707251</td>   <td></td> </tr>
-<tr bgcolor="f084a8">  <td>23/11/14 22:43:09</td>   <td>10416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Part2Groups.wrongUsernameTest()[pri:3, instance:testng_controlflow.Part2Groups@3b2da18f]">wrongUsernameTest</td> 
-  <td>main@2021707251</td>   <td></td> </tr>
-<tr bgcolor="f084a8">  <td>23/11/14 22:43:22</td>   <td>23462</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Part2Groups.wrongPasswordTest()[pri:4, instance:testng_controlflow.Part2Groups@3b2da18f]">wrongPasswordTest</td> 
-  <td>main@2021707251</td>   <td></td> </tr>
+<tr bgcolor="f084a8">  <td>24/01/02 04:32:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AppleBagItmes.setUp()[pri:0, instance:quiz.AppleBagItmes@475e586c]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@76432244</td>   <td></td> </tr>
+<tr bgcolor="f084a8">  <td>24/01/02 04:32:52</td>   <td>6934</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppleBagItmes.byingMacBookAir()[pri:0, instance:quiz.AppleBagItmes@475e586c]">byingMacBookAir</td> 
+  <td>main@76432244</td>   <td></td> </tr>
+<tr bgcolor="f084a8">  <td>24/01/02 04:33:30</td>   <td>45107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AppleBagItmes.tearDown()[pri:0, instance:quiz.AppleBagItmes@475e586c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@76432244</td>   <td></td> </tr>
 </table>
