--- a/HomeWork/test-output/old/Default suite/reporter-output.html
+++ b/HomeWork/test-output/old/Default suite/reporter-output.html
@@ -1,37 +1,5 @@
-<h2>Reporter output</h2><table><tr><td>
-Starting execution of "Positive LogIn Credentials"</td></tr>
-<tr><td>SetUp process has finished</td></tr>
-<tr><td>	Locating, Adding and Submiting "PositiveUser data"</td></tr>
-<tr><td>	Finished the process</td></tr>
-<tr><td>skip this LogOut part IN CONSOLE, it's FALSE inside ()</td></tr>
-<tr><td>Test Completed</td></tr>
+<h2>Reporter output</h2><table><tr><td>Submiting choosen paramaters</td></tr>
 <tr><td>
-Starting execution of "problemUserTest"</td></tr>
-<tr><td>	Locating, Adding and Submiting "ProblemUser data"</td></tr>
-<tr><td>	Finished the process</td></tr>
-<tr><td>Test completed, quit the Browser section</td></tr>
-<tr><td>
-Starting execution of "Negative LogIn Credentials"</td></tr>
-<tr><td>SetUp process has finished</td></tr>
-<tr><td>	Locating, Adding and Submiting "WrongUserName data"</td></tr>
-<tr><td>	Finished the process</td></tr>
-<tr><td>	Locate and Get the error message</td></tr>
+Reviewing Busket</td></tr>
 <tr><td>	Compare expectedMessage to actualMessage </td></tr>
-<tr><td>Test Completed</td></tr>
-<tr><td>
-Refresh the Web Seccion...</td></tr>
-<tr><td>Starting execution of "wrongPasswordTest"</td></tr>
-<tr><td>	Locating, Adding and Submiting "WrongPassword data"</td></tr>
-<tr><td>	Finished the process</td></tr>
-<tr><td>	Locate and Get the error message</td></tr>
-<tr><td>	Compare expectedMessage to actualMessage </td></tr>
-<tr><td>Test Completed</td></tr>
-<tr><td>
-Refresh the Web Seccion...</td></tr>
-<tr><td>Starting execution of "LockedOutUserTest"</td></tr>
-<tr><td>	Locating, Adding and Submiting "LockedOutUser data"</td></tr>
-<tr><td>	Finished the process</td></tr>
-<tr><td>	Locate and Get the error message</td></tr>
-<tr><td>	Compare expectedMessage to actualMessage </td></tr>
-<tr><td>Test Completed, quit the Browser seccion</td></tr>
 </table>
