--- a/HomeWork/test-output/emailable-report.html
+++ b/HomeWork/test-output/emailable-report.html
@@ -9,19 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">59,239</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">50,293</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">testng_controlflow.Part2Groups</td><td><a href="#m0">LockedOutUserTest</a></td><td rowspan="1">1700019813390</td><td rowspan="1">10539</td></tr><tr class="passedeven"><td><a href="#m1">positiveLogInandOut</a></td><td rowspan="1">1700019764741</td><td rowspan="1">14730</td></tr><tr class="passedeven"><td><a href="#m2">problemUserTest</a></td><td rowspan="1">1700019779477</td><td rowspan="1">10414</td></tr><tr class="passedeven"><td><a href="#m3">wrongPasswordTest</a></td><td rowspan="1">1700019802939</td><td rowspan="1">10449</td></tr><tr class="passedeven"><td><a href="#m4">wrongUsernameTest</a></td><td rowspan="1">1700019789893</td><td rowspan="1">13044</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">quiz.AppleBagItmes</td><td><a href="#m0">byingMacBookAir</a></td><td rowspan="1">1704187972765</td><td rowspan="1">38170</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testng_controlflow.Part2Groups#LockedOutUserTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">
-Refresh the Web Seccion...<br/>Starting execution of "LockedOutUserTest"<br/>	Locating, Adding and Submiting "LockedOutUser data"<br/>	Finished the process<br/>	Locate and Get the error message<br/>	Compare expectedMessage to actualMessage <br/>Test Completed, quit the Browser seccion</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testng_controlflow.Part2Groups#positiveLogInandOut</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">
-Starting execution of "Positive LogIn Credentials"<br/>SetUp process has finished<br/>	Locating, Adding and Submiting "PositiveUser data"<br/>	Finished the process<br/>skip this LogOut part IN CONSOLE, it's FALSE inside ()<br/>Test Completed</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">testng_controlflow.Part2Groups#problemUserTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">
-Starting execution of "problemUserTest"<br/>	Locating, Adding and Submiting "ProblemUser data"<br/>	Finished the process<br/>Test completed, quit the Browser section</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">testng_controlflow.Part2Groups#wrongPasswordTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">
-Refresh the Web Seccion...<br/>Starting execution of "wrongPasswordTest"<br/>	Locating, Adding and Submiting "WrongPassword data"<br/>	Finished the process<br/>	Locate and Get the error message<br/>	Compare expectedMessage to actualMessage <br/>Test Completed</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">testng_controlflow.Part2Groups#wrongUsernameTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">
-Starting execution of "Negative LogIn Credentials"<br/>SetUp process has finished<br/>	Locating, Adding and Submiting "WrongUserName data"<br/>	Finished the process<br/>	Locate and Get the error message<br/>	Compare expectedMessage to actualMessage <br/>Test Completed</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">quiz.AppleBagItmes#byingMacBookAir</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Submiting choosen paramaters<br/>
+Reviewing Busket<br/>	Compare expectedMessage to actualMessage </div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
