--- a/HomeWork/test-output/old/Default suite/classes.html
+++ b/HomeWork/test-output/old/Default suite/classes.html
@@ -4,36 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testng_controlflow.Part2Groups</td>
+<td>quiz.AppleBagItmes</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>wrongPasswordTest</td>
-<td>negative </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>wrongUsernameTest</td>
-<td>negative </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>positiveLogInandOut</td>
-<td>positive </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>LockedOutUserTest</td>
-<td>negative </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>problemUserTest</td>
-<td>positive </td>
-</tr>
+<td>byingMacBookAir</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -41,8 +20,16 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
